# SourEngine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  Color.cpp  Color.h  LogManager.cpp  LogManager.h  Manager.h  Manager.tpp  RenderManager.cpp  RenderManager.h  ShaderProgram.cpp  ShaderProgram.h
src/core/render/: RenderManager.cpp  RenderManager.h  ShaderProgram.cpp  ShaderProgram.h
src/core/resource/: Image.cpp  Image.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.tpp  Texture.cpp  Texture.h
src/core/util/: Error.h  Types.h
